# mprispot

./: Cargo.toml  README.md
src/: main.rs
src/api/: auth.rs  metadata.rs  mod.rs
src/dbus/: base.rs  mod.rs  player.rs
