[package]
name = "mprispot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
zbus = { version = "2.1.1", default-features = false, features = ["tokio"] }
rspotify = { version = "0.11.5", features = ["cli"] }
